kubernetes/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web-login-demo
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: registry.internal:5000/web-login-demo_web:1.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: web-login-demo
  name: web-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
